--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
+spring.profiles.active=${APP_PROFILE:test}
+
 spring.jpa.open-in-view=false
-spring.profiles.active=test
-spring.devtools.restart.enabled=true
 
 
 
